[tool.poetry]
name = "fastscaledb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
sqlmodel = "^0.0.21"
fastapi-mqtt = "^2.2.0"
uvicorn = {version = "^0.30.6", extras = ["standard"]}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
